--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//WebContent/account.jsp=UTF-8
 encoding//WebContent/index.jsp=UTF-8
+encoding//WebContent/products.jsp=UTF-8
